fixed nav bar spacing in ipad

--- a/styles/home.css
+++ b/styles/home.css
@@ -89,3 +89,38 @@ nav ul li a:hover {
 	font-family: 'Pacifico', cursive;
 	text-align:center;
 }
+
+@media all and (max-width: 1024px) {
+	
+.row {
+	height:200px;
+	overflow:hidden;
+}
+.row img{
+	width:245px;
+	height:200px;
+	float:left;
+}
+.navigation {
+	text-align:right;
+	margin-right:100px;
+	position:absolute;
+	top:30px;
+	right:10px;
+}
+.window {
+	position:absolute;
+	top:300px;
+	left:305px;
+	width:500px;
+	height:200px;
+	background-color:#FFF;
+	color:black;
+	padding:10px;
+	font-size:20px;
+	font-family: 'Pacifico', cursive;
+	text-align:center;
+}
+	}
+
+
